--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             
             <p id="timeCount">10:00</p>
             <button id="start">Start</button>
+            <button id="stop" style="display:none;">Stop</button>
             <div id="buttonContainer">
             <button id="timeUp">+</button>
             <button id="timeDown">-</button>
